# kafka-load-testing

./: locustfile.py  pyproject.toml  users.py
examples/: kafka_consumer.py  kafka_producer.py  kafka_zookeeper_compose.yml
